--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "a simple api thats hide a message in a bitmap image, using Least Significant Bit LSB",
   "main": "index.js",
   "scripts": {
-    "build": "tsc ./src",
+    "start": "ts-node ./src/index.ts",
     "dev-start": "tsnd --transpile-only --ignore-watch node_modules ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc ./src",
+    "test": "clear && jest ./src/tests/MessageBusiness.test.ts"
   },
   "repository": {
     "type": "git",
@@ -26,16 +27,24 @@
   },
   "homepage": "https://github.com/danilo-ac/steganography-node-api#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "typescript": "^4.4.4"
+    "jsonwebtoken": "^8.5.1",
+    "typescript": "^4.4.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/uuid": "^8.3.1",
     "jest": "^27.3.1",
+    "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8"
   }
 }
