--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "ts-node ./src/index.ts",
     "dev-start": "tsnd --transpile-only --ignore-watch node_modules ./src/index.ts",
     "build": "tsc ./src",
-    "test": "clear && jest ./src/tests/SteganoBusiness.test.ts"
+    "test-steganoBusiness": "clear && jest ./src/tests/SteganoBusiness.test.ts",
+    "test-fileBusines": "clear && jest ./src/tests/FileBusiness.test.ts"
   },
   "repository": {
     "type": "git",
