--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "typescript": "^4.4.4",
     "uuid": "^8.3.2"
   },
@@ -43,6 +44,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.1",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
